--- a/mobile/templates/card_index.html
+++ b/mobile/templates/card_index.html
@@ -28,6 +28,7 @@
 <body style="background-color:#eeeeee;">
 <div class="main">
 	<div class="ban_div">开乐迪优惠码：</div>
+	<div style="color:#999;padding:5px 5px 0 10px;font-size:13px;">凭开乐迪优惠码，可在吴江万宝广场开乐迪免费欢唱2小时，此优惠券使用有效期为15天，过期作废。</div>
 	<{foreach from=$kld_list item=kv}>
 	<div class="card_box">
 		<div class="kld_code"><{$kv.code}></div>
