--- a/mobile/templates/trolley_lb.html
+++ b/mobile/templates/trolley_lb.html
@@ -38,6 +38,7 @@
             <div class="clearfix"></div>
         </div>
         </form>
+		<div style="text-align:center;font-size:14px;color:#ff4400;padding-top:8px;">（当天16点前的订单当天发货）</div>
     </div>
 </section>
 <div class="clearfix"></div>
