--- a/mobile/templates/user_add_company.html
+++ b/mobile/templates/user_add_company.html
@@ -55,6 +55,9 @@
 			<div class="clear"></div>		
 		</div>
 		<div class="input_group">
+			<input type="text" name="str[zhen]" value="<{$vo.zhen}>" placeholder="请填写镇" />
+		</div>
+		<div class="input_group">
 			<input type="text" name="str[address]" value="<{$vo.address}>" placeholder="请填写详细地址" />
 		</div>
 		<div class="input_group checkVal">
