--- a/mobile/templates/user_jk.html
+++ b/mobile/templates/user_jk.html
@@ -79,7 +79,7 @@ margin: 0 2%;
 				<div class="title">开户行名称:</div>
 			</div>
 			<div class="input_group">
-				<div style="font-size:14px;color:#666;margin-top:5px;">注：若非吴江本地中国银行，将会根据异地/异行收取手续费2.5/5元不等</div>
+				<div style="font-size:14px;color:#666;margin-top:5px;">注：若非中国银行卡，将会根据异地/异行收取手续费2.5/5元不等</div>
 			</div>
 			<div class="input_group">
 				<input style="text-indent:6em;" type="text" name="str[bank_card]" value="<{$userRow.bank_card}>" placeholder="请输入卡号" />
