--- a/home/app/hptshop/templates/order_add.html
+++ b/home/app/hptshop/templates/order_add.html
@@ -126,8 +126,10 @@
 								<div class="shop_sort_title"><h4>状态：</h4></div>
 								<div class="shop_sort_set" style="margin:10px;color:#4E5359;">
 									<input type="radio" name="info[status]" id="status0" value="0" <{if $vo.status==0}>checked<{/if}> > <label for="status0">待处理&nbsp;&nbsp;</label>
+									<{if $vo.is_pay==1}>
 									<input type="radio" name="info[status]" id="status1" value="1" <{if $vo.status==1}>checked<{/if}> > <label for="status1">已发货&nbsp;&nbsp;</label>
 									<input type="radio" name="info[status]" id="status2" value="2" <{if $vo.status==2}>checked<{/if}> > <label for="status2">已签收&nbsp;&nbsp;</label>
+									<{/if}>
 									<input type="radio" name="info[status]" id="status3" value="3" <{if $vo.status==3}>checked<{/if}> > <label for="status3">无效单</label>
 								</div>
 							</div>
@@ -185,7 +187,7 @@ function save(event,obj){
 			success:function(res) {
 				if(res){
 					note_info("保存成功","success",event);
-					setTimeout("window.location.href='order.php'",300);
+					setTimeout("window.history.go(-1)",300);
 				}else{
 					$(obj).attr("subFromFlag",0);
 					note_info('保存失败','warn',event);
