Signed-off-by: hanbing <295079454@qq.com>

--- a/home/app/hptshop/templates/goods_add.html
+++ b/home/app/hptshop/templates/goods_add.html
@@ -98,6 +98,14 @@
 									<input maxlength="30" class="shop_sort_text" name="str[fact_price]" value="<{$vo.fact_price}>" type="text" style="width:80px" /><span class="input_span_extra">&nbsp;元</span>
 								</div>
 							</div>
+							<div class="shop_sort">
+								<div class="shop_sort_title">
+									<h4>销量：</h4>
+								</div>
+								<div class="shop_sort_set">
+									<input class="shop_sort_text" name="str[outnum]" value="<{$vo.outnum}>" type="text" style="width:80px" />
+								</div>
+							</div>
 							<!-- <div class="shop_sort">
 								<div class="shop_sort_title">
 									<h4>库存：</h4>
