--- a/home/app/templates/index.html
+++ b/home/app/templates/index.html
@@ -22,5 +22,14 @@
 				<div class="txt-intro" style="bottom:10px;"><div class="txt"><span class="tit">开乐迪优惠券</span></div></div>
 			</a>
 		</div>
+		<div id="Div1" class="serBox">
+			<a href="../../tp/admin.php?m=SubAgent&a=index" style="color:#666;">
+				<div class="app-type"></div>
+				<div class="mypng" style="top:15px;">
+					<img class="pic1" src="../public/img/app/membercard.png">
+					<img class="pic2" src="../public/img/app/membercard-1.png"> </div>
+				<div class="txt-intro" style="bottom:10px;"><div class="txt"><span class="tit">校园代理</span></div></div>
+			</a>
+		</div>
 	</div>
 </div></div></div></div>
