--- a/home/user/templates/detail.html
+++ b/home/user/templates/detail.html
@@ -29,7 +29,7 @@
 									</div>
 									<div class="shop_sort">
 										<div class="shop_sort_title">
-											<h4>真是姓名</h4>
+											<h4>真实姓名</h4>
 										</div>
 										<b><{$vo.nickname}></b>
 									</div>
