--- a/mobile/templates/user_jk.html
+++ b/mobile/templates/user_jk.html
@@ -126,9 +126,9 @@ function tixian(){
 	}
 }
 function save(){
-	if("<{$userRow.is_see}>"=="1"){
-		alert('您的银行卡信息已审核通过，如需修改请联系客服');return;
-	}
+	//if("<{$userRow.is_see}>"=="1"){
+		//alert('您的银行卡信息已审核通过，如需修改请联系客服');return;
+	//}
 	if($('input[name="str[bank_name]"]').val()==''){
 		alert("请填写银行名称");return;
 	}
