--- a/mobile/templates/user_index_personal.html
+++ b/mobile/templates/user_index_personal.html
@@ -136,9 +136,9 @@
 			</li>
 			</a>
 			<{if $userRow.agent_num != ''}>
-			<a href="index.php?m=agent&a=info">
+			<a href="index.php?m=agent&a=mid">
 			<li>
-				<div class="list_info">代理商信息设置</div>
+				<div class="list_info">我的店铺</div>
 				<div class="next"><span class="fa fa-chevron-right" ></span></div>
 			</li>
 			</a>
