Signed-off-by: hanbing <295079454@qq.com>

--- a/home/app/hptshop/templates/order_add.html
+++ b/home/app/hptshop/templates/order_add.html
@@ -74,7 +74,7 @@
 									<h4>订单额：</h4>
 								</div>
 								<div class="shop_sort_set" style="line-height:33px;">
-									￥<{$vo.money}>（含运费<{$vo.yunfei}>元）
+									￥<{$vo.money}><b style='color:red'>（含运费<{$vo.yunfei}>元，折扣为<{$vo.discount}>）</b>
 								</div>
 							</div>
 							<div class="shop_sort">
