--- a/mobile/templates/shop.html
+++ b/mobile/templates/shop.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>商城</title>
+    <title><{$shop_name|default:'云淘坊'}></title>
 	<meta name="description" content="微信">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -12,6 +12,8 @@
 	<script src="js/jquery.min.js"></script>
 	<style>
 		.noDisPrice{margin-left:0.9em;line-height:2em;text-decoration:line-through;}
+		#shop_name{color:#ffffff;background-color:#01B4EC;text-align:center;height:40px;
+			line-height:40px;letter-spacing:2px;font-size:18px;}
 	</style>
 </head>
 <body class='white'>
