Signed-off-by: hanbing <295079454@qq.com>

--- a/home/task/templates/sign_index_js.html
+++ b/home/task/templates/sign_index_js.html
@@ -28,6 +28,7 @@
     </style>
 </head>
 <body style='width:350px;'>
+<a href="index.php?m=task_company&a=sign_index&tid=<{$smarty.get.tid}>" style="display:block;text-align:center;margin:10px auto 0;width:30%;background-color:blue;color:#fff;padding:5px 8px;">去发送消息</a>
 <div class="bm5041">
     <p class="bm5041_tit">人员列表（<{if $pay_type==1}>现金日结<{else}>转账日结<{/if}>）</p>
     <div class="bm5041_con">
